[package]
name = "sapling-crypto"
version = "0.0.1"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.65"
description = "Cryptographic library for Zcash Sapling"
homepage = "https://github.com/zcash/sapling-crypto"
repository = "https://github.com/zcash/sapling-crypto"
license = "MIT OR Apache-2.0"

[dependencies]
ff = "0.13"
group = "0.13"

bls12_381 = "0.8"
jubjub = "0.10"
redjubjub = "0.7"
zcash_spec = "0.1"

# Circuits
bellman = { version = "0.14", default-features = false, features = ["groth16"] }

# CSPRNG
rand = "0.8"
rand_core = "0.6"

# Digests
blake2b_simd = "1"
blake2s_simd = "1"

# Encodings
byteorder = "1"
hex = "0.4"

# Logging and metrics
memuse = "0.2.1"
tracing = "0.1"

# Note Commitment Trees
bitvec = "1"
incrementalmerkletree = "0.5"

# Note encryption
zcash_note_encryption = "0.4"

# Secret management
subtle = "2.2.3"

# Static constants
lazy_static = "1"

# Test dependencies
proptest = { version = "1", optional = true }

# ZIP 32
aes = "0.8"
fpe = "0.6"
zip32 = "0.1"

[dev-dependencies]
chacha20poly1305 = "0.10"
proptest = "1"
rand_xorshift = "0.3"

[features]
multicore = ["bellman/multicore"]
test-dependencies = ["proptest"]
