[package]
name = "zcash_extensions"
description = "Zcash Extension implementations & consensus node integration layer."
version = "0.1.0"
authors = ["Jack Grigg <jack@z.cash>", "Kris Nuttycombe <kris@z.cash>"]
homepage = "https://github.com/zcash/librustzcash"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
release = false

[dependencies]
blake2b_simd.workspace = true
zcash_primitives = { version = "0.26", features = ["non-standard-fees", "circuits"] }
zcash_protocol = { version = "0.7" }

# Stwo Cairo dependencies for STARK verification
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", branch = "main" }
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "ee33b014", default-features = false, features = ["parallel", "prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "ee33b014", default-features = false, features = ["parallel", "prover"] }
stwo-cairo-common = { git = "https://github.com/starkware-libs/stwo-cairo", branch = "main" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", branch = "main" }

# Additional dependencies required by cairo-air
starknet-curve = "0.6.0"
starknet-ff = "0.3.7"
starknet-types-core = { version = "0.2.0", features = ["serde"] }
itertools = "0.12.0"
serde.workspace = true
thiserror = "2.0.12"

[dev-dependencies]
ff.workspace = true
jubjub.workspace = true
rand_core.workspace = true
sapling.workspace = true
orchard.workspace = true
transparent.workspace = true
zcash_address.workspace = true
zcash_proofs = { workspace = true, features = ["local-prover", "bundled-prover"] }

[features]
transparent-inputs = []
zip-233 = ["zcash_primitives/zip-233"]

[lib]
bench = false

[lints]
workspace = true
